--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,4 +24,5 @@
     </div>
   </div>
   <%= form.submit 'Sign Up', class: 'btn btn-primary' %>
+  <%= link_to 'Sign In', new_session_url %>
 <% end %>
