--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
-<%= form_with model: @user, id: 'register-form',  local: true do |form| %>
+<div class="container d-flex align-items-center" style="height: 100vh">
+  <%= form_with model: @user, id: 'register-form', class: 'w-100', local: true do |form| %>
   <h2>Sign Up</h2>
   <div class="form-row">
     <div class="form-group col-md-6">
@@ -23,6 +24,7 @@
       </small>
     </div>
   </div>
-  <%= form.submit 'Sign Up', class: 'btn btn-primary' %>
-  <%= link_to 'Sign In', new_session_url %>
+  <%= form.submit 'Sign Up', class: 'btn btn-primary mb-2' %><br>
+  or you can <%= link_to 'Sign In', new_session_url %>
 <% end %>
+</div>
